@startuml
package ska_oso_pdm.entities.csp{
       package common as c1 <<Rectangle>> {
            class SubarrayConfiguration {
                subarray_name: str
            }

            class CommonConfiguration {
                subarray_id: int
                band_5_tuning: List[float]
            }

            class CBFConfiguration {

            }

            class PSTConfiguration {

            }

            class PSSConfiguration {

            }

            class VLBIConfiguration {

            }

            class CSPConfigurationID
            class CSPConfiguration {
                config_id: CSPConfigurationID
            }

            class FSPConfiguration {
                fsp_id : int
                function_mode : FSPFunctionMode
                frequency_slice_id : int
                integration_factor : int
                zoom_factor : int
                channel_averaging_map : List[Tuple]
                output_link_map : List[Tuple]
                channel_offset : int
                zoom_window_tuning : int
            }

    '        CSPConfiguration *-- "0..* " FSPConfiguration : fsp_configs
            enum FSPFunctionMode {
                CORR
                PSS_BF
                PST_BF
                VLBI
            }
        }

            CBFConfiguration *-- "0..*" FSPConfiguration
            CBFConfiguration *-- VLBIConfiguration
            CSPConfiguration *-- CommonConfiguration
            CSPConfiguration *-- SubarrayConfiguration
            CSPConfiguration *-- CBFConfiguration
            CSPConfiguration *-- PSTConfiguration
            CSPConfiguration *-- PSSConfiguration

            FSPConfiguration -[hidden]> FSPFunctionMode
    }

@enduml
